2008-01-19  NightStrike  <nightstrike@gmail.com>

	* doc/automake.texi (Dependency Tracking): Fix typo.

2008-01-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/config.guess, lib/config.sub: Sync from upstream.

	* Makefile.am (WGET_SV_CVS): Renamed from WGETSGO.
	(WGET_SV_GIT_AC, WGET_SV_GIT_GL, WGET_GCC): New.
	(fetch): Update to match current upstream locations.

2008-01-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/gnupload: Revert last change.  Add pointer to upload
	instructions of the GNU Maintenance Instructions.
	Suggestion by Karl Berry.

	* lib/gnupload: Add missing 'gnu' to example URL.
	Report by Karl Berry.

	* lib/gnupload: Fix shell portability issues with for loops.
	Report by Karl Berry.

2008-01-19  Jim Meyering  <meyering@redhat.com>

	* lib/gnupload (GPG): Don't use an absolute path.
	This reverts part of the 2004-01-28 change.

2008-01-19  Akim Demaille  <akim@lrde.epita.fr>

	* bootstrap: Fix typos on redirections.

2008-01-19  Akim Demaille  <akim@lrde.epita.fr>

	Skip comments and empty lines in dirlist in the tests.
	* defs.in (extra_includes): Skip comments and empty lines in dirlist.

2008-01-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/ylwrap: Cope with white space in `PROGRAM' and `pwd`.

	* lib/am/tags.am (ID, TAGS, CTAGS): Make awk scripts portable again.
	(CTAGS): Drop unneeded variable `here'.

2008-01-19  Jim Meyering  <meyering@redhat.com>

	Add lzma compression support.
	* NEWS: Mention it.
	* automake.in (handle_dist): Recognize dist-lzma.
	(make_paragraphs): Map LZMA to dist-lzma.
	* doc/automake.texi (Dist): Add dist-lzma.
	(Options): Likewise.
	* lib/Automake/Options.pm (_process_option_list):
	* lib/am/distdir.am (dist-lzma): New rule.
	(dist dist-all): Add command to create an lzma-compressed tarball.
	(distcheck): Handle lzma-compressed tarballs just like the others.
	* tests/defs.in: Test for lzma, too.
	* tests/lzma.test: New file, based on nogzip.test.
	* tests/Makefile.am (TESTS): Add lzma.test.