@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2004  Free Software Foundation, Inc.
+# Copyright (C) 2004, 2008  Free Software Foundation, Inc.
 #
 # This file is part of GNU Automake.
 #
@@ -37,5 +37,8 @@ $ACLOCAL
 $AUTOCONF
 $AUTOMAKE
 ./configure
+
+grep 'am__tar.*false' Makefile && exit 77
+
 $MAKE distcheck
 test -f tar-1.0.tar.gz
