@@ -1,3 +1,7 @@
+2008-01-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* tests/tar.test: Skip if no appropriate tar was found.
+
 2008-01-19  NightStrike  <nightstrike@gmail.com>
 
 	* doc/automake.texi (Dependency Tracking): Fix typo.
